tcps/nohup.out
Server start at: :8100
wait for connection...
Connected by  ('117.136.31.255', 9716)
Connected by  ('223.104.63.171', 51891)
7e7e232355544e02000119070915012500b600010006550e0a0192280005000102a0950006000102030405000400061907091501255140000806c9ee28015864744e21000200004e220002000051a60002000051ac00020000a09800010051a90002000051ab0002017ab010000157b012000400001197b0a2000101b0a800040000000a55510009ffffff000000ffffff55520009ffffffffffffffffff55530009ffffff000000ffffff00060001030007000214b1
7e7e232355544e02000219070915013400b600010006550e0a0192280005000102a0950006000102030405000400061907091501345140000806c9ee28015864744e21000200004e220002000051a60002000051ac00020000a09800010051a90002000051ab0002017ab010000157b0120004000011a2b0a2000101b0a800040000000a55510009ffffff000000ffffff55520009ffffffffffffffffff55530009ffffff000000ffffff000600010300070002ee0f
7e7e232355544e02000319070915014600b600010006550e0a0192280005000102a0950006000102030405000400061907091501465140000806c9ee28015864744e21000200004e220002000051a60002000051ac00020000a09800011951a90002000051ab0002017bb010000157b0120004000011adb0a2000101b0a800040000000a55510009ffffff000000ffffff55520009ffffffffffffffffff55530009ffffff000000ffffff0006000103000700021445
7e7e232355544e02000419070915015900b600010006550e0a0192280005000102a0950006000102030405000400061907091501595140000806c9ee28015864744e21000200004e220002000051a60002000051ac00020000a09800011951a90002000051ab0002017ab010000157b0120004000011bab0a2000101b0a800040000000a55510009ffffff000000ffffff55520009ffffffffffffffffff55530009ffffff000000ffffff000600010300070002730a
7e7e232355544e02000519070915021200b600010006550e0a0192280005000102a0950006000102030405000400061907091502125140000806c9ee28015864744e21000200004e220002000051a60002000051ac00020000a09800011a51a90002000051ab0002017bb010000157b0120004000011c7b0a2000101b0a800040000000a55510009ffffff000000ffffff55520009ffffffffffffffffff55530009ffffff000000ffffff000600010300070002f380
7e7e232355544e02000619070915022400b600010006550e0a0192280005000102a0950006000102030405000400061907091502245140000806c9ee28015864744e21000200004e220002000051a60002000051ac00020000a09800011951a90002000051ab0002017bb010000157b0120004000011d3b0a2000101b0a800040000000a55510009ffffff000000ffffff55520009ffffffffffffffffff55530009ffffff000000ffffff0006000103000700028eda
7e7e232355544e02000719070915023500b600010006550e0a0192280005000102a0950006000102030405000400061907091502355140000806c9ee28015864744e21000200004e220002000051a60002000051ac00020000a09800011951a90002000051ab0002017bb010000157b0120004000011dfb0a2000101b0a800040000000a55510009ffffff000000ffffff55520009ffffffffffffffffff55530009ffffff000000ffffff000600010300070002cba7
7e7e232355544e02000819070915024700b600010006550e0a0192280005000102a0950006000102030405000400061907091502475140000806c9ee28015864744e21000200004e220002000051a60002000051ac00020000a09800011a51a90002000051ab0002017bb010000157b0120004000011eab0a2000101b0a800040000000a55510009ffffff000000ffffff55520009ffffffffffffffffff55530009ffffff000000ffffff000600010300070002cd0b
7e7e232355544e02000919070915025800b600010006550e0a0192280005000102a0950006000102030405000400061907091502585140000806c9ee28015864744e21000200004e220002000051a60002000051ac00020000a09800011a51a90002000051ab0002017bb010000157b0120004000011f6b0a2000101b0a800040000000a55510009ffffff000000ffffff55520009ffffffffffffffffff55530009ffffff000000ffffff0006000103000700025609
7e7e232355544e02000a19070915031000b600010006550e0a0192280005000102a0950006000102030405000400061907091503105140000806c9ee28015864744e21000200004e220002000051a60002000051ac00020000a09800011a51a90002000051ab0002017ab010000157b012000400001201b0a2000101b0a800040000000a55510009ffffff000000ffffff55520009ffffffffffffffffff55530009ffffff000000ffffff000600010300070002350c
7e7e232355544e02000b19070915032100b600010006550e0a0192280005000102a0950006000102030405000400061907091503215140000806c9cb78015878024e21000200004e220002000051a60002000051ac00020000a09800011a51a90002000051ab0002017bb010000157b01200040000120db0a2000101b0a800040000000a55510009ffffff000000ffffff55520009ffffffffffffffffff55530  File "/root/TCPUDP/tcps/main.py", line 39
    log.warning('ED20 GPS Tracker Full Data %r from %s <br>' % (data, addr))
      ^
SyntaxError: invalid syntax
